# Smart-HR-Assistant

./: Dockerfile  README.md  main.py  package-lock.json  package.json  requirements.txt
backend/: main.py  pyproject.toml  requirements.txt
backend/models/: ats_score.py  parser.py  question_genrator_analyser.py  resume_analyser.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.css
frontend/src/components/: Header.js  LHome.js
frontend/src/pages/: Analysis.js  home.js  questions.js
models/: ats_score.py  parser.py  question_genrator_analyser.py  resume_analyser.py
src/: App.js
src/components/: FileUploader.js  Header.js  LHome.js
src/pages/: Analysis.js  home.js
